<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_title_height"
                android:gravity="center"
                android:text="@string/main_title"
                android:textColor="@color/text_title_color"
                android:textSize="@dimen/main_title_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_background"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center"
                    android:text="@string/item_title1"
                    android:textColor="@color/text_title_color"
                    android:textSize="@dimen/item_title_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/item_one"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/item_two"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/item_there"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center"
                    android:text="@string/item_title2"
                    android:textColor="@color/text_title_color"
                    android:textSize="@dimen/item_title_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/company_mg"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/company_ug"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/each_quantity"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/number_bottles"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/liquid_quantity"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_item_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/weight"
                        android:textColor="@color/text_title_color" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_edit_text_weight"
                        android:background="@drawable/shape_edit_normal"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/main_item_weight" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_button_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/reset" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calculation" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_title_height"
                android:gravity="center"
                android:text="@string/see_instructions"
                android:textColor="@color/text_title_color"
                android:textSize="@dimen/main_title_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/instructions" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_background" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
